casi al final  de js

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
 <!--<script src="funciones.js"></script>-->
 <!--<script src="if-else.js"></script>-->
 <!--<script src="logica-booleana.js"></script>-->
-<script src="evaluacion.js"></script>-
+<!--<script src="evaluacion.js"></script>-->
+<!--<script src="switch.js"></script>-->
+<!--<script src="if-else2.js"></script>-->
+<!--<script src="tienda.js"></script>-->
+<!--<script src="operador-ternario.js"></script>-->
+<!--<script src="while-do-while.js"></script>-->
+<script src="for.js"></script>
 </html>
